More InceptionResnet fine-tuning

--- a/InceptionResnet.ipynb
+++ b/InceptionResnet.ipynb
@@ -642,7 +642,7 @@
     {
      "data": {
       "text/plain": [
-       "1.8028912544250488"
+       "1.8793977499008179"
       ]
      },
      "execution_count": 52,
@@ -824,6 +824,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Unfreeze top 2 hidden layers, train with lower learning rate for additional 20 epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = InceptionResnet().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path/\"initial_inceptionresnet_71.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8871086372269524, 0.7077777777777777)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_trainable_attr(m, b=True):\n",
+    "    for p in m.parameters(): p.requires_grad = b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unfreeze(model, l):\n",
+    "    top_model = model.top_model\n",
+    "    set_trainable_attr(top_model[l])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unfreeze(model, 15)\n",
+    "unfreeze(model, 14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train2(model, epochs=5, learning_rate=0.01):\n",
+    "    optimzer = get_optimizer(model, lr=learning_rate, wd=0)\n",
+    "    prev_val_acc = 0.0\n",
+    "    for i in range(epochs):\n",
+    "        model.train()\n",
+    "        total = 0\n",
+    "        sum_loss = 0\n",
+    "        for x, y in train_dl:\n",
+    "            batch = y.shape[0]\n",
+    "            x = x.cuda().float()\n",
+    "            y = y.cuda()\n",
+    "            out = model(x)\n",
+    "            _, pred = torch.max(out, 1)\n",
+    "            loss = F.cross_entropy(out, y)\n",
+    "            optimzer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimzer.step()\n",
+    "            total += batch\n",
+    "            sum_loss += batch*(loss.item())\n",
+    "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
+    "        if i % 2 == 0:\n",
+    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
+    "        if val_acc > prev_val_acc:\n",
+    "            prev_val_acc = val_acc\n",
+    "            if val_acc > 0.7:\n",
+    "                path = \"{0}/unfreeze_inceptionresnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "                save_model(model, path)\n",
+    "                print(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 1.215 val loss 1.123 val accuracy 0.709\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inceptionresnet_71.pth\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inceptionresnet_72.pth\n",
+      "train loss 0.345 val loss 0.915 val accuracy 0.739\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inceptionresnet_74.pth\n",
+      "train loss 0.192 val loss 0.960 val accuracy 0.723\n",
+      "train loss 0.163 val loss 0.963 val accuracy 0.731\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inceptionresnet_75.pth\n",
+      "train loss 0.132 val loss 0.897 val accuracy 0.753\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inceptionresnet_75.pth\n",
+      "train loss 0.095 val loss 0.978 val accuracy 0.754\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inceptionresnet_75.pth\n",
+      "train loss 0.098 val loss 1.014 val accuracy 0.736\n",
+      "train loss 0.093 val loss 1.024 val accuracy 0.737\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inceptionresnet_76.pth\n",
+      "train loss 0.070 val loss 1.023 val accuracy 0.741\n",
+      "train loss 0.069 val loss 1.067 val accuracy 0.763\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inceptionresnet_76.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "train2(model, epochs=20, learning_rate=0.001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Unfreeze top 4 hidden layers, train with lower learning rate for additional 20 epochs"
    ]
   },
@@ -867,27 +1013,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def set_trainable_attr(m, b=True):\n",
-    "    for p in m.parameters(): p.requires_grad = b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def unfreeze(model, l):\n",
-    "    top_model = model.top_model\n",
-    "    set_trainable_attr(top_model[l])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
    "outputs": [],
@@ -896,42 +1021,6 @@
     "unfreeze(model, 14)\n",
     "unfreeze(model, 13)\n",
     "unfreeze(model, 12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train2(model, epochs=5, learning_rate=0.01):\n",
-    "    optimzer = get_optimizer(model, lr=learning_rate, wd=0)\n",
-    "    prev_val_acc = 0.0\n",
-    "    for i in range(epochs):\n",
-    "        model.train()\n",
-    "        total = 0\n",
-    "        sum_loss = 0\n",
-    "        for x, y in train_dl:\n",
-    "            batch = y.shape[0]\n",
-    "            x = x.cuda().float()\n",
-    "            y = y.cuda()\n",
-    "            out = model(x)\n",
-    "            _, pred = torch.max(out, 1)\n",
-    "            loss = F.cross_entropy(out, y)\n",
-    "            optimzer.zero_grad()\n",
-    "            loss.backward()\n",
-    "            optimzer.step()\n",
-    "            total += batch\n",
-    "            sum_loss += batch*(loss.item())\n",
-    "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
-    "        if i % 2 == 0:\n",
-    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
-    "        if val_acc > prev_val_acc:\n",
-    "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.7:\n",
-    "                path = \"{0}/unfreeze_inceptionresnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
-    "                save_model(model, path)\n",
-    "                print(path)"
    ]
   },
   {
