--- a/data_augmentation_Resnet.ipynb
+++ b/data_augmentation_Resnet.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "II. Resnet34 on images preprocessed with Histogram Equalization\n",
     "\n",
-    "III. Resnet34 on images preprocessed with Grey World + Histogram Equalization\n",
+    "III. Resnet34 on images preprocessed with Histogram Equalization + Grey World\n",
     "\n",
     "IV. Resnet34 with Grey World + Histogram Equalization as a random data augmentation"
    ]
@@ -2796,7 +2796,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# III. Resnet34 on images preprocessed with Grey World + Histogram Equalization"
+    "# III. Resnet34 on images preprocessed with Histogram Equalization + Grey World"
    ]
   },
   {
@@ -2939,7 +2939,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = PATH/\"gwhe-train-315\""
+    "path = PATH/\"hewg-train-315\""
    ]
   },
   {
@@ -3427,7 +3427,7 @@
     {
      "data": {
       "text/plain": [
-       "1.8441417217254639"
+       "1.9388099908828735"
       ]
      },
      "execution_count": 52,
@@ -3526,7 +3526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3554,14 +3554,14 @@
     "        if val_acc > prev_val_acc: \n",
     "            prev_val_acc = val_acc\n",
     "            if val_acc > 0.6:\n",
-    "                path = \"{0}/initial_gwhe_resnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "                path = \"{0}/initial_hewg_resnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3570,7 +3570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {
     "scrolled": false
    },
@@ -3579,14 +3579,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.487 val loss 0.929 val accuracy 0.681\n",
-      "/home/ubuntu/models/sandwich/initial_gwhe_resnet_68.pth\n",
-      "train loss 0.876 val loss 1.040 val accuracy 0.621\n",
-      "train loss 0.896 val loss 1.184 val accuracy 0.634\n",
-      "train loss 0.954 val loss 1.076 val accuracy 0.648\n",
-      "/home/ubuntu/models/sandwich/initial_gwhe_resnet_68.pth\n",
-      "train loss 0.882 val loss 0.975 val accuracy 0.679\n",
-      "/home/ubuntu/models/sandwich/initial_gwhe_resnet_69.pth\n"
+      "train loss 1.529 val loss 0.924 val accuracy 0.676\n",
+      "/home/ubuntu/models/sandwich/initial_hewg_resnet_68.pth\n",
+      "train loss 0.882 val loss 0.848 val accuracy 0.701\n",
+      "/home/ubuntu/models/sandwich/initial_hewg_resnet_70.pth\n",
+      "train loss 0.927 val loss 0.855 val accuracy 0.710\n",
+      "/home/ubuntu/models/sandwich/initial_hewg_resnet_71.pth\n",
+      "train loss 0.803 val loss 0.851 val accuracy 0.700\n",
+      "train loss 0.838 val loss 0.967 val accuracy 0.686\n"
      ]
     }
    ],
@@ -3603,7 +3603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3612,16 +3612,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path/\"initial_gwhe_resnet_69.pth\")"
+    "load_model(model, model_path/\"initial_hewg_resnet_71.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 83,
    "metadata": {
     "scrolled": true
    },
@@ -3629,10 +3629,10 @@
     {
      "data": {
       "text/plain": [
-       "(1.0367018050617642, 0.6855555555555556)"
+       "(0.8553838498062558, 0.71)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3643,7 +3643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3653,7 +3653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3664,7 +3664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3674,7 +3674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3701,37 +3701,36 @@
     "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
     "        if val_acc > prev_val_acc: \n",
     "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.69:\n",
-    "                path = \"{0}/unfreeze_gwhe_resnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "            if val_acc > 0.71:\n",
+    "                path = \"{0}/unfreeze_hewg_resnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.268 val loss 0.902 val accuracy 0.700\n",
-      "/home/ubuntu/models/sandwich/unfreeze_gwhe_resnet_70.pth\n",
-      "train loss 0.574 val loss 0.684 val accuracy 0.773\n",
-      "/home/ubuntu/models/sandwich/unfreeze_gwhe_resnet_77.pth\n",
-      "train loss 0.423 val loss 0.708 val accuracy 0.771\n",
-      "train loss 0.291 val loss 0.743 val accuracy 0.786\n",
-      "/home/ubuntu/models/sandwich/unfreeze_gwhe_resnet_79.pth\n",
-      "train loss 0.235 val loss 1.083 val accuracy 0.719\n",
-      "train loss 0.161 val loss 0.948 val accuracy 0.743\n",
-      "/home/ubuntu/models/sandwich/unfreeze_gwhe_resnet_79.pth\n",
-      "train loss 0.143 val loss 0.932 val accuracy 0.752\n",
-      "train loss 0.109 val loss 1.058 val accuracy 0.751\n",
-      "train loss 0.105 val loss 1.132 val accuracy 0.730\n",
-      "train loss 0.127 val loss 0.737 val accuracy 0.799\n",
-      "/home/ubuntu/models/sandwich/unfreeze_gwhe_resnet_80.pth\n",
-      "/home/ubuntu/models/sandwich/unfreeze_gwhe_resnet_81.pth\n"
+      "train loss 1.216 val loss 0.944 val accuracy 0.671\n",
+      "train loss 0.562 val loss 0.796 val accuracy 0.732\n",
+      "/home/ubuntu/models/sandwich/unfreeze_hewg_resnet_73.pth\n",
+      "/home/ubuntu/models/sandwich/unfreeze_hewg_resnet_75.pth\n",
+      "train loss 0.385 val loss 0.665 val accuracy 0.780\n",
+      "/home/ubuntu/models/sandwich/unfreeze_hewg_resnet_78.pth\n",
+      "train loss 0.308 val loss 0.832 val accuracy 0.749\n",
+      "train loss 0.240 val loss 0.844 val accuracy 0.773\n",
+      "train loss 0.204 val loss 0.836 val accuracy 0.761\n",
+      "train loss 0.139 val loss 0.943 val accuracy 0.768\n",
+      "/home/ubuntu/models/sandwich/unfreeze_hewg_resnet_79.pth\n",
+      "train loss 0.125 val loss 0.858 val accuracy 0.772\n",
+      "train loss 0.111 val loss 0.883 val accuracy 0.778\n",
+      "train loss 0.083 val loss 0.861 val accuracy 0.777\n",
+      "/home/ubuntu/models/sandwich/unfreeze_hewg_resnet_82.pth\n"
      ]
     }
    ],
@@ -3741,7 +3740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3750,25 +3749,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path/\"/home/ubuntu/models/sandwich/unfreeze_gwhe_resnet_81.pth\")"
+    "load_model(model, model_path/\"/home/ubuntu/models/sandwich/unfreeze_hewg_resnet_82.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7640104989210764, 0.8111111111111111)"
+       "(0.7238615949948629, 0.8211111111111111)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3874,7 +3873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3909,7 +3908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3932,7 +3931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3951,7 +3950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3987,8 +3986,8 @@
     "        print(\"train_loss %.3f val_loss %.3f val_acc %.3f\" % (train_loss, val_loss, val_acc))\n",
     "        if val_acc > prev_val_acc: \n",
     "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.69:\n",
-    "                path = \"{0}/ft_gwhe_resnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "            if val_acc > 0.71:\n",
+    "                path = \"{0}/ft_hewg_resnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)\n",
     "    return sum_loss/total"
@@ -3996,7 +3995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4005,7 +4004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4014,7 +4013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4023,7 +4022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4032,16 +4031,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.8651788632074993, 0.13777777777777778)"
+       "(1.875699394279056, 0.17222222222222222)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4052,59 +4051,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss 1.468 val_loss 1.173 val_acc 0.564\n",
-      "train_loss 1.084 val_loss 1.259 val_acc 0.558\n",
+      "train_loss 1.430 val_loss 1.065 val_acc 0.650\n",
+      "train_loss 1.034 val_loss 0.911 val_acc 0.681\n",
       "216 unfreezing 1\n",
-      "train_loss 1.070 val_loss 1.267 val_acc 0.568\n",
-      "train_loss 1.987 val_loss 5.499 val_acc 0.389\n",
-      "train_loss 1.344 val_loss 1.449 val_acc 0.507\n",
-      "train_loss 1.303 val_loss 2.424 val_acc 0.483\n",
-      "train_loss 1.052 val_loss 1.055 val_acc 0.601\n",
-      "train_loss 0.961 val_loss 1.237 val_acc 0.550\n",
-      "train_loss 0.903 val_loss 1.556 val_acc 0.487\n",
-      "train_loss 0.797 val_loss 1.392 val_acc 0.612\n",
-      "train_loss 0.751 val_loss 1.459 val_acc 0.584\n",
-      "train_loss 0.693 val_loss 1.345 val_acc 0.620\n",
-      "train_loss 0.642 val_loss 0.978 val_acc 0.680\n",
-      "train_loss 0.599 val_loss 1.047 val_acc 0.710\n",
-      "/home/ubuntu/models/sandwich/ft_gwhe_resnet_71.pth\n",
-      "train_loss 0.544 val_loss 0.829 val_acc 0.717\n",
-      "/home/ubuntu/models/sandwich/ft_gwhe_resnet_72.pth\n",
-      "train_loss 0.523 val_loss 0.909 val_acc 0.720\n",
-      "/home/ubuntu/models/sandwich/ft_gwhe_resnet_72.pth\n",
-      "train_loss 0.464 val_loss 1.263 val_acc 0.677\n",
-      "train_loss 0.420 val_loss 0.737 val_acc 0.763\n",
-      "/home/ubuntu/models/sandwich/ft_gwhe_resnet_76.pth\n",
-      "train_loss 0.407 val_loss 0.697 val_acc 0.778\n",
-      "/home/ubuntu/models/sandwich/ft_gwhe_resnet_78.pth\n",
-      "train_loss 0.336 val_loss 1.038 val_acc 0.718\n",
-      "train_loss 0.278 val_loss 0.922 val_acc 0.743\n",
-      "train_loss 0.278 val_loss 0.797 val_acc 0.772\n",
-      "train_loss 0.213 val_loss 0.707 val_acc 0.819\n",
-      "/home/ubuntu/models/sandwich/ft_gwhe_resnet_82.pth\n",
-      "train_loss 0.177 val_loss 0.774 val_acc 0.779\n",
-      "train_loss 0.137 val_loss 0.722 val_acc 0.819\n",
-      "train_loss 0.122 val_loss 0.756 val_acc 0.803\n",
-      "train_loss 0.094 val_loss 0.744 val_acc 0.804\n",
-      "train_loss 0.091 val_loss 0.738 val_acc 0.812\n",
-      "train_loss 0.081 val_loss 0.734 val_acc 0.812\n",
-      "train_loss 0.072 val_loss 0.734 val_acc 0.812\n"
+      "train_loss 1.037 val_loss 1.255 val_acc 0.571\n",
+      "train_loss 1.843 val_loss 1.433 val_acc 0.500\n",
+      "train_loss 1.302 val_loss 1.505 val_acc 0.457\n",
+      "train_loss 1.252 val_loss 224.853 val_acc 0.220\n",
+      "train_loss 1.065 val_loss 2.609 val_acc 0.351\n",
+      "train_loss 0.897 val_loss 1.179 val_acc 0.589\n",
+      "train_loss 0.819 val_loss 1.554 val_acc 0.622\n",
+      "train_loss 0.766 val_loss 0.850 val_acc 0.726\n",
+      "/home/ubuntu/models/sandwich/ft_hewg_resnet_73.pth\n",
+      "train_loss 0.741 val_loss 1.121 val_acc 0.640\n",
+      "train_loss 0.710 val_loss 0.771 val_acc 0.746\n",
+      "/home/ubuntu/models/sandwich/ft_hewg_resnet_75.pth\n",
+      "train_loss 0.663 val_loss 1.112 val_acc 0.650\n",
+      "train_loss 0.593 val_loss 0.764 val_acc 0.752\n",
+      "/home/ubuntu/models/sandwich/ft_hewg_resnet_75.pth\n",
+      "train_loss 0.534 val_loss 0.713 val_acc 0.773\n",
+      "/home/ubuntu/models/sandwich/ft_hewg_resnet_77.pth\n",
+      "train_loss 0.489 val_loss 0.770 val_acc 0.777\n",
+      "/home/ubuntu/models/sandwich/ft_hewg_resnet_78.pth\n",
+      "train_loss 0.458 val_loss 0.909 val_acc 0.712\n",
+      "train_loss 0.381 val_loss 0.723 val_acc 0.766\n",
+      "train_loss 0.347 val_loss 0.756 val_acc 0.776\n",
+      "train_loss 0.302 val_loss 1.042 val_acc 0.727\n",
+      "train_loss 0.269 val_loss 0.748 val_acc 0.771\n",
+      "train_loss 0.223 val_loss 0.820 val_acc 0.753\n",
+      "train_loss 0.199 val_loss 0.896 val_acc 0.774\n",
+      "train_loss 0.156 val_loss 0.711 val_acc 0.810\n",
+      "/home/ubuntu/models/sandwich/ft_hewg_resnet_81.pth\n",
+      "train_loss 0.133 val_loss 0.710 val_acc 0.811\n",
+      "/home/ubuntu/models/sandwich/ft_hewg_resnet_81.pth\n",
+      "train_loss 0.116 val_loss 0.757 val_acc 0.818\n",
+      "/home/ubuntu/models/sandwich/ft_hewg_resnet_82.pth\n",
+      "train_loss 0.091 val_loss 0.759 val_acc 0.817\n",
+      "train_loss 0.076 val_loss 0.756 val_acc 0.818\n",
+      "train_loss 0.065 val_loss 0.764 val_acc 0.821\n",
+      "/home/ubuntu/models/sandwich/ft_hewg_resnet_82.pth\n",
+      "train_loss 0.071 val_loss 0.766 val_acc 0.822\n",
+      "/home/ubuntu/models/sandwich/ft_hewg_resnet_82.pth\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.07167739951465693"
+       "0.07116714126378712"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4115,7 +4118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4124,25 +4127,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path/\"/home/ubuntu/models/sandwich/ft_gwhe_resnet_82.pth\")"
+    "load_model(model, model_path/\"/home/ubuntu/models/sandwich/ft_hewg_resnet_82.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7074355334043503, 0.8188888888888889)"
+       "(0.7655745827489429, 0.8222222222222222)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
