--- a/image_preprocess.ipynb
+++ b/image_preprocess.ipynb
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Grey World then Histogram Equalization"
+    "# Histogram Equalization then Grey World "
    ]
   },
   {
@@ -270,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path = Path(\"/home/ubuntu/data/sandwich/\")/\"gw-train-315\""
+    "train_path = Path(\"/home/ubuntu/data/sandwich/\")/\"he-train-315\""
    ]
   },
   {
@@ -279,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_path = Path(\"/home/ubuntu/data/sandwich/\")/\"gw-test-315\""
+    "test_path = Path(\"/home/ubuntu/data/sandwich/\")/\"he-test-315\""
    ]
   },
   {
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_train_path = Path(\"/home/ubuntu/data/sandwich/\")/\"gwhe-train-315\""
+    "new_train_path = Path(\"/home/ubuntu/data/sandwich/\")/\"hewg-train-315\""
    ]
   },
   {
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_test_path = Path(\"/home/ubuntu/data/sandwich/\")/\"gwhe-test-315\""
+    "new_test_path = Path(\"/home/ubuntu/data/sandwich/\")/\"hewg-test-315\""
    ]
   },
   {
@@ -324,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def histogram_equalize_all_images(new_path, org_path):\n",
+    "def grey_world_all_images(new_path, org_path):\n",
     "    paths = [x for x in list(org_path.iterdir()) if x.is_dir()]\n",
     "    for p in paths:\n",
     "        label = p.parts[-1]\n",
@@ -332,8 +332,8 @@
     "        files = list((org_path/label).iterdir())\n",
     "        for f in files:\n",
     "            f_name = f.parts[-1]\n",
-    "            he_img = histogram_equalize_image(f)\n",
-    "            cv2.imwrite(str(new_path/label/f_name), he_img)"
+    "            gw_img = grey_world_image(f)\n",
+    "            cv2.imwrite(str(new_path/label/f_name), gw_img)"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# histogram_equalize_all_images(new_train_path, train_path)"
+    "# grey_world_all_images(new_train_path, train_path)"
    ]
   },
   {
@@ -351,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# histogram_equalize_all_images(new_test_path, test_path)"
+    "# grey_world_all_images(new_test_path, test_path)"
    ]
   },
   {
@@ -440,7 +440,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7179f7e278>"
+       "<matplotlib.image.AxesImage at 0x7f15596ca4e0>"
       ]
      },
      "execution_count": 37,
@@ -481,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7179f1cc88>"
+       "<matplotlib.image.AxesImage at 0x7f155963deb8>"
       ]
      },
      "execution_count": 39,
